--- a/tools/game-mechanics/package.json
+++ b/tools/game-mechanics/package.json
@@ -46,5 +46,10 @@
     "ts-jest": "^25.4.0",
     "tslib": "^1.11.1",
     "typescript": "~3.8.3"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   }
 }
