--- a/apps/run-generator/tsconfig.json
+++ b/apps/run-generator/tsconfig.json
@@ -9,7 +9,7 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "sourceMap": true,
-    "baseUrl": "src",
+    "baseUrl": ".",
     "types": ["webpack-env", "jest"],
     "paths": {
       "@/*": ["src/*"]
