--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,14 @@ common/temp/
 # production
 build
 dist
+
+### VisualStudioCode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+### VisualStudioCode Patch ###
+# Ignore all local history of files
+.history
