--- a/tools/game-mechanics/tsconfig.json
+++ b/tools/game-mechanics/tsconfig.json
@@ -12,6 +12,6 @@
     "rootDir": "src",
     "baseUrl": "src"
   },
-  "include": ["src"],
-  "exclude": ["node_modules", "src/**/*.test.ts"]
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules"]
 }
