--- a/package.json
+++ b/package.json
@@ -1,13 +1,22 @@
 {
+  "name": "sr5e-tools",
+  "version": "0.0.1",
+  "description": "A set of tools for Shadowrun 5E",
   "devDependencies": {
-    "eslint": "^6.8.0",
     "husky": "^4.2.5",
-    "lint-staged": "^10.2.2",
-    "prettier": "^2.0.5"
+    "staged-git-files": "^1.2.0"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/DTCurrie/sr5e-tools.git"
+  },
+  "author": "Devin T. Currie",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/DTCurrie/sr5e-tools/issues"
+  },
+  "homepage": "https://github.com/DTCurrie/sr5e-tools#readme",
   "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
+    "precommit": "node scripts/precommit.js"
   }
 }
