Reworking hooks per Rush strategy

--- a/common/config/rush/browser-approved-packages.json
+++ b/common/config/rush/browser-approved-packages.json
@@ -31,6 +31,10 @@
       "allowedCategories": [ "tools" ]
     },
     {
+      "name": "@sr5e-tools/game-mechanics",
+      "allowedCategories": [ "production" ]
+    },
+    {
       "name": "@testing-library/dom",
       "allowedCategories": [ "production" ]
     },
