--- a/apps/run-generator/package.json
+++ b/apps/run-generator/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "run-generator",
+  "name": "@sr5e-tools/run-generator",
   "version": "0.1.0",
   "private": true,
   "author": "Devin T. Currie",
@@ -11,8 +11,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@sr5e-tools/game-mechanics": "~0.1.0",
     "core-js": "^3.6.4",
-    "game-mechanics": "~1.0.0",
     "vue": "^2.6.11"
   },
   "devDependencies": {
@@ -37,12 +37,14 @@
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
     "fibers": "^5.0.0",
-    "jest": "^25.5.4",
+    "jest": "^24.9.0",
+    "jquery": "^3.5.1",
     "node-sass": "^4.12.0",
+    "popper.js": "^1.16.1",
     "prettier": "^2.0.5",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
-    "ts-jest": "^25.4.0",
+    "ts-jest": "^24.2.0",
     "typescript": "~3.8.3",
     "utf-8-validate": "^5.0.2",
     "vue-template-compiler": "^2.6.11",
